--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:front": "react-scripts start",
+    "start": "yarn build && yarn server:prod",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server:dev": "nodemon server.js",
     "server:prod": "node server.js"
+
   },
   "eslintConfig": {
     "extends": [
